# lab_threads_6

./: CMakeLists.txt  README.md  lab_2.6.cpp  lab_2.6.h
