# CMakeList.txt: проект CMake для lab_2.6; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("lab_2.6")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab_2.6 "lab_2.6.cpp" "lab_2.6.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
